feedback.txt
Your test suite did not compile!

tests/tests.cc:101:1: error: expected ')'
  101 | }
      | ^
tests/tests.cc:100:22: note: to match this '('
  100 |   atm.RegisterAccount(12345678, 123
      |                      ^
1 error generated.


score: 0/5
